2006-01-20  Samuel Thibault  <samuel.thibault@ens-lyon.org>

        Do not let other libraries (like libX11) override libpthread's
        pthread_mutex_*, pthread_rwlock_* and sem_* dynamic symbols.
	* libpthread/sysdeps/generic/pt-mutex-destroy.c
	(pthread_mutex_destroy): Make the alias strong.
	* libpthread/sysdeps/generic/pt-mutex-init.c
	(pthread_mutex_init): Likewise.
	* libpthread/sysdeps/generic/pt-mutex-lock.c
	(_pthread_mutex_lock, pthread_mutex_lock): Likewise.
	* libpthread/sysdeps/generic/pt-mutex-trylock.c
	(_pthread_mutex_trylock, pthread_mutex_trylock): Likewise.
	* libpthread/sysdeps/generic/pt-mutex-unlock.c
	(_pthread_mutex_lock, pthread_mutex_unlock): Likewise.
	* libpthread/sysdeps/generic/pt-rwlock-destroy.c
	(pthread_rwlock_destroy): Likewise.
	* libpthread/sysdeps/generic/pt-rwlock-init.c
	(pthread_rwlock_init): Likewise.
	* libpthread/sysdeps/generic/sem-destroy.c (sem_destroy): Likewise.
	* libpthread/sysdeps/generic/sem-getvalue.c (sem_getvalue): Likewise.
	* libpthread/sysdeps/generic/sem-init.c (sem_init): Likewise.
	* libpthread/sysdeps/generic/sem-open.c (sem_open): Likewise.
	* libpthread/sysdeps/generic/sem-post.c (sem_post): Likewise.
	* libpthread/sysdeps/generic/sem-timedwait.c (sem_timedwait): Likewise.
	* libpthread/sysdeps/generic/sem-trywait.c (sem_trywait): Likewise.
	* libpthread/sysdeps/generic/sem-unlink.c (sem_unlink): Likewise.
	* libpthread/sysdeps/generic/sem-wait.c (sem_wait): Likewise.

2006-12-03  Thomas Schwinge  <tschwinge@gnu.org>

	[bug #17121 --- ``GNU Hurd debian dir'']
	* debian/ChangeLog: Remove file.
	* Makefile (other-subdirs): Remove `debian'.

2006-07-24  Thomas Schwinge  <tschwinge@gnu.org>

	[bug #17127]
	* Makeconf (clean): Don't remove `*.*_d' files.
	(%.sdefsi): Add `%.sdefs.d' to the target list.  Create these files by
	specifying `-MD' as a flag for CPP and mangle the output as needed.
	Include these `*.sdefs.d' files instead of `*.migs_d' and `*.migsh_d'
	files.